<!--
  ~ /*
  ~  *
  ~  *  * Copyright 2016. Kurtis <kurtis_hu@hotmail.com>
  ~  *  *
  ~  *  * Licensed under the Apache License, Version 2.0 (the "License");
  ~  *  * you may not use this file except in compliance with the License.
  ~  *  * You may obtain a copy of the License at
  ~  *  *
  ~  *  *     http://www.apache.org/licenses/LICENSE-2.0
  ~  *  *
  ~  *  * Unless required by applicable law or agreed to in writing, software
  ~  *  * distributed under the License is distributed on an "AS IS" BASIS,
  ~  *  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~  *  * See the License for the specific language governing permissions and
  ~  *  * limitations under the License.
  ~  *
  ~  */
  -->

<resources>
    <string name="app_name">干货集中营</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="text_no_result">新鲜的干货还没有出炉，请稍后再试！</string>

    <string name="title_fuli">妹子图集</string>
    <string name="title_daily">天天干货</string>
    <string name="title_category">分类干货</string>
    <string name="title_mine">我的干货</string>
    <string name="title_setting">设置</string>

    <string name="tip_add_collection_success">收藏成功</string>
    <string name="tip_add_clip_success">复制成功</string>
    <string name="tip_add_collection_fail">收藏失败，请重试！</string>

    <string name="nav_about">关于我</string>

    <string name="button_confirm">确定</string>
    <string name="button_get_start">进入应用</string>

    <string name="title_theme">选择喜欢的主题</string>
    <string name="key_theme" translatable="false">key_theme</string>
    <string name="light">亮色主题</string>
    <string name="dark">暗色主题</string>
    <string-array name="pref_theme_list_entries">
        <item>@string/light</item>
        <item>@string/dark</item>
    </string-array>
    <string-array name="pref_theme_list_values">
        <item>light</item>
        <item>dark</item>
    </string-array>

    <string name="key_save_net_mode" translatable="false">save_net_mode</string>
    <string name="summary_save_net_mode">仅在Wi-Fi环境下才自动加载图片</string>
    <string name="title_save_net_mode">省流量模式</string>

    <string name="key_clear_cache" translatable="false">clear_cache</string>
    <string name="summary_clear_cache">删除已缓存的内容及图片</string>
    <string name="title_clear_cache">清空缓存</string>

    <string name="key_version" translatable="false">version</string>
    <string name="title_other">其他</string>
    <string name="title_version">检查新版本</string>
    <string name="version" formatted="false">当前版本: %s_%s (%s)</string>

</resources>
