<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout="@layout/preference_item"
    android:title="设置界面">

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="基本设置">

        <ListPreference
            android:layout="@layout/preference_item"
            android:defaultValue="light"
            android:entries="@array/pref_theme_list_entries"
            android:entryValues="@array/pref_theme_list_values"
            android:key="@string/key_theme"
            android:summary="%s"
            android:title="@string/title_theme"
            android:dialogTitle ="@string/title_theme" />

        <CheckBoxPreference
            android:key="@string/key_save_net_mode"
            android:layout="@layout/preference_item"
            android:summary="@string/summary_save_net_mode"
            android:title="@string/title_save_net_mode"
            android:widgetLayout="@layout/switch_layout" />

        <Preference
            android:key="@string/key_clear_cache"
            android:layout="@layout/preference_item"
            android:summary="@string/summary_clear_cache"
            android:title="@string/title_clear_cache" />
    </PreferenceCategory>

    <PreferenceCategory
        android:layout="@layout/preference_category"
        android:title="@string/title_other">
        <Preference
            android:key="@string/key_version"
            android:layout="@layout/preference_item"
            android:summary="V 1.0"
            android:title="@string/title_version" />
        <Preference
            android:layout="@layout/preference_item"
            android:summary="GitHub：https://github.com/kurtishu/GankApp"
            android:title="KurtisHu" />
    </PreferenceCategory>

</PreferenceScreen>